[tool.poetry]
name = "elementos de analise de dados "
version = "0.1.0"
description = ""
authors = ["nanda"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
